logs/dag_id=Weather_DAG_V4.2/run_id=scheduled__2024-02-12T044600+0000/task_id=data_to_db/attempt=1.log
[2024-02-12T12:10:20.203+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T04:46:00+00:00 [queued]>
[2024-02-12T12:10:20.302+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T04:46:00+00:00 [queued]>
[2024-02-12T12:10:20.303+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-12T12:10:20.545+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): data_to_db> on 2024-02-12 04:46:00+00:00
[2024-02-12T12:10:20.617+0000] {standard_task_runner.py:60} INFO - Started process 11698 to run task
[2024-02-12T12:10:20.633+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V4.2', 'data_to_db', 'scheduled__2024-02-12T04:46:00+00:00', '--job-id', '8492', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmp3u86w5o_']
[2024-02-12T12:10:20.667+0000] {standard_task_runner.py:88} INFO - Job 8492: Subtask data_to_db
[2024-02-12T12:10:21.202+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V4.2.data_to_db scheduled__2024-02-12T04:46:00+00:00 [running]> on host 06573eafe810
[2024-02-12T12:10:21.545+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V4.2' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-12T04:46:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-12T04:46:00+00:00'
[2024-02-12T12:10:21.550+0000] {sql.py:276} INFO - Executing: 
        LOAD DATA INFILE weather.csv 
        INTO TABLE weather_tab 
        FIELDS TERMINATED BY ',' 
        ENCLOSED BY '"'
        LINES TERMINATED BY 'n'
        IGNORE 1 ROWS
        
[2024-02-12T12:10:21.582+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:10:21.654+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:10:21.732+0000] {sql.py:450} INFO - Running statement: 
        LOAD DATA INFILE weather.csv 
        INTO TABLE weather_tab 
        FIELDS TERMINATED BY ',' 
        ENCLOSED BY '"'
        LINES TERMINATED BY 'n'
        IGNORE 1 ROWS
        , parameters: None
[2024-02-12T12:10:21.752+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "DATA"
LINE 2:         LOAD DATA INFILE weather.csv 
                     ^

[2024-02-12T12:10:21.809+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=Weather_DAG_V4.2, task_id=data_to_db, execution_date=20240212T044600, start_date=20240212T121020, end_date=20240212T121021
[2024-02-12T12:10:21.967+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 8492 for task data_to_db (syntax error at or near "DATA"
LINE 2:         LOAD DATA INFILE weather.csv 
                     ^
; 11698)
[2024-02-12T12:10:22.042+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-12T12:10:22.534+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
